--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<!--- ICS2O-My first PWA --->
+<!--- ICS2O-Unit3-03 --->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My first PWA" />
+    <meta name="description" content="Volume of a Sphere, With JS" />
     <meta name="keywords" content="mths, ics2o" />
-    <meta name="author" content="Mr. Coxall" />
+    <meta name="author" content="Darcy Murphy" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>GitHub page as PWA template</title>
-    <link rel="canonical" href="https://mr-coxall.github.io/ICS2O-PWA-Test/" />
-    <link rel="manifest" href="/ICS2O-PWA-Test/manifest.webmanifest" />
+    <title>Volume of a Sphere, With JS</title>
+    <link
+      rel="canonical"
+      href="https://darcy-murphy.github.io/ICS2O-Unit3-03/"
+    />
+    <link rel="manifest" href="/ICS2O-Unit3-03/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
@@ -42,35 +45,50 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first PWA</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">My first PWA</span>
+          <span class="mdl-layout-title">Volume of a Sphere, With JS</span>
         </div>
       </header>
       <main class="mdl-layout__content">
-        <p></p>
-        <img
-          src="./images/notebook-animation.svg"
-          alt="Computer"
-          width="25%"
-          height="25%"
-        />
-        <p></p>
+        <img src="./images/Sphere.png" alt="Volume of a sphere" />
+        <h3>volume of Sphere With JS</h3>
+        <h5>Formula</h5>
+        <h6>V = 4/3 π r³</h6>
+        <br />
+        <br />
+        <p>Enter the following dimensions</p>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <p>Radius</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="number"
+              step=".01"
+              placeholder="e.g. 15"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="radius-of-sphere"
+              aria-label="radius"
+            />
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          mm
+        </form>
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="myButtonClicked()"
+          onclick="enterClicked()"
         >
-          Say "Hello, World!"
+          Calculate
         </button>
-        <!-- basic text -->
-        <p></p>
-        <div id="hello-world"></div>
+        <br />
+        <br />
+        <div id="volume-of-sphere">The volume of the sphere is: ? cm³.</div>
       </main>
     </div>
   </body>
