--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <img src="./images/Sphere.png" alt="Volume of a sphere" />
+        <img src="./images/download.png" alt="Volume of a sphere" />
         <h3>volume of Sphere With JS</h3>
         <h5>Formula</h5>
         <h6>V = 4/3 π r³</h6>
